<resources>

    <string name="app_name">AndroidSweeper</string>

    <!-- Activies -->
    <string name="title_activity_main">AndroidSweeper</string>

    <!-- Menu -->
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_clear_highscore">Highscores löschen</string>
    <string name="menu_get_hint">Tipp (%1$s/%2$s)</string>

    <!-- Info Bar -->
    <string name="info_bar_time">Zeit:</string>
    <string name="info_bar_bombs">Bomben:</string>
    <string name="info_bar_flags">Fahnen:</string>

    <!-- Dialogs -->
    <!-- GameFinishedDialog -->
    <string name="dialog_finished_won_title">Geschafft!</string>
    <string name="dialog_finished_won_message">Herzlichen Glückwünsch du hast gewonnen.\nDeine Zeit: %1$.3f Sekunden.</string>
    <string name="dialog_finished_lose_title">Schade</string>
    <string name="dialog_finished_lose_message">Vielleicht klappt es ja beim nächsten mal.\nDeine Zeit: %1$.3f Sekunden.</string>
    <string name="dialog_finished_button_back">Zurück</string>
    <string name="dialog_finished_button_restart">Nochmal</string>
    <string name="dialog_finished_button_highscore">Highscore</string>
    <string name="dialog_finished_player_name">Bitte Spielernamen eintragen:</string>
    <string name="dialog_finished_new_highscore">Du hast einen neuen Highscore erzielt.</string>

    <!-- ClearHighscoreDialog -->
    <string name="dialog_clearhighscore_title">Highscores löschen</string>
    <string name="dialog_clearhighscore_message">Bist du sicher, dass du deine Highscore löschen willst?</string>
    <string name="dialog_clearhighscore_button_delete">Löschen!</string>
    <string name="dialog_clearhighscore_button_abort">Abbrechen</string>

    <!-- Toasts -->
    <string name="toast_clearhighscore_successful">Highscores gelöscht.</string>

    <!-- Preferences -->
    <string name="prefs_default_player_name">Spielername</string>
    <string name="prefs_default_player_name_key">player_name</string>
    <string name="prefs_default_player_name_summary">Bitte Spielernamen eingeben</string>
    <string name="prefs_test_category_title">Testing</string>
    <string name="prefs_test_ignore_gamestate_switch_title">Ignore state</string>
    <string name="prefs_test_ignore_gamestate_switch_key">ignore_gamestate_switch</string>
    <string name="prefs_test_ignore_gamestate_switch_key_summaryOn">Highscore is always added, regardless of game result</string>
    <string name="prefs_test_ignore_gamestate_switch_key_summaryOff">Off</string>
    <string name="prefs_game_category_title">Game</string>
    <string name="prefs_test_ignore_hints_switch_title">Ignore hints</string>
    <string name="prefs_test_ignore_hints_switch_key">ignore_hints_switch</string>
    <string name="prefs_test_ignore_hints_switch_key_summaryOn">Highscore will be added, regardless of hint use</string>
    <string name="prefs_test_ignore_hints_switch_key_summaryOff">Off</string>

</resources>