<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/info_bar_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shape"
            android:gravity="center_horizontal"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <!-- TODO: Use images instead of text so save space -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/info_bar_bombs"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:visibility="gone"/>
        
         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:src="@drawable/bomb"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_bombs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shape"
            android:gravity="center_horizontal"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <!-- TODO: Use images instead of text so save space -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/info_bar_flags"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:visibility="gone"/>

         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:src="@drawable/flag"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/txt_flags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shape"
            android:gravity="center_horizontal"
            android:padding="4dp" />
    </LinearLayout>

</RelativeLayout>